# quakeCore

./: .gitignore  CMakeLists.txt  README.md
docs/superpowers/results/: 2026-05-12-bsp2-acceptance.txt  2026-05-12-bsp2-crossover.csv  2026-05-12-bsp2-crossover.md  2026-05-12-bsp2-megamap-parity.csv  2026-05-12-bsp2-megamap-parity.txt  2026-05-12-bsp2-megamap-summary.txt  2026-05-12-v29-baseline-pre-widening.txt  2026-05-12-v29-post-widening.txt
docs/superpowers/specs/: 2026-05-11-gpu-amortization-design.md  2026-05-11-quakespasm-integration-design.md  2026-05-12-bsp2-megamap-support-design.md  2026-05-12-live-quake-cotraversal-design.md
examples/maps/: README.md
include/quakecore/: bsp_parser.hpp  camera_path.hpp  engines.hpp  frustum.hpp  gpu_context.hpp  types.hpp
include/quakecore_live/: frame_protocol.h
scripts/: benchmark.sh  build_ironwail_with_probe.sh  community_benchmark.sh  fetch_community_maps.sh  fetch_maps.sh  perlmutter_live.md
scripts/maps/: build_megamap.sh  extract_bsp_assets.py  megamap_fallback.sh  smoke_all_v29.sh  write_manifest.py
scripts/plotting/: main.py  pyproject.toml
src/apps/: app_common.hpp  baseline_main.cpp  bench_main.cpp  cpu_opt_main.cpp  gpu_opt_main.cpp
src/bench/: camera_path.cpp
src/core/: frustum.cpp
src/engines/: baseline_engine.cpp  cpu_opt_engine.cpp  gpu_context.cu  gpu_kernel.cuh  gpu_opt_engine.cu
src/io/: bsp_parser.cpp
src/live/: fake_game.cpp  frame_runner.cpp  frame_runner.hpp  protocol.c  sha256.c  sha256.h  sidecar_main.cpp  transport_common.c  transport_internal.h  transport_shm.c  transport_tcp.c
tests/live/: test_fake_game_parity.cpp  test_protocol.c  test_shm_ring.c
